# Classes-Q3-Q4

./: LangGraph~HEAD
00_fastapi_todo_gpt/: compose.yaml
Fullstack-Todo-App/: compose.yaml
Fullstack-Todo-App-with-FastAPI-SQLModel-Nextjs-14-main/frontend/: package-lock.json  package.json
LangGraph/: 00_edges_nodes_graph.ipynb  00_quickstart_part1_to_part7.ipynb  01_conditional_edge.ipynb  2.1_tools_messages.ipynb  2.2_chains_reducers.ipynb  3_router.ipynb  AGENTIC_PROJECTS  README.md  Text_Analysis_Pipeline_practice.ipynb
LangGraph/AGENTIC_PROJECTS/: 00_chat_agent_final.ipynb  01_human_interactions.ipynb  01_human_interactions_Command.ipynb
LangGraph/module-01/: 2.1_tools_messages.ipynb  4_agent.ipynb  5_agent_memory.ipynb  6_deployment.ipynb  LangChain_with_Gemini.ipynb  tool_calling_issue.ipynb
LangGraph/module-2/: 1_state_schema.ipynb  2_state_reducers.ipynb  3_multiple_schemas.ipynb  4_trim_filter_messages.ipynb  5_chatbot_summarization.ipynb  6.0_chatbot_external_memory_with_sqlite.ipynb  6.1_chatbot_external_memory_with_our_db_file.ipynb  6.2_chatbot_external_memory_with_postgres.ipynb
LangGraph/module-3/: 1_streaming_interruption.ipynb  2_breakpoints.ipynb  3_edit_state_human_feedback.ipynb  4_dynamic_breakpoints.ipynb  (+1 more)
class-01/fastapi_example/: pyproject.toml
kafka single node compose/: compose.yaml
to-do-app/backend/todo-app/: README.md  pyproject.toml
to-do-app/backend/todo-app/tests/: test_main.py
to-do-app/backend/todo-app/todo_app/: auth.py  db.py  main.py  models.py
to-do-app/backend/todo-app/todo_app/router/: user.py
(+25 files in other folders)
