[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Alla-ud-din <allauddin.aliahmad9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
